--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Babel==2.12.1
 Django==4.2.3
 django-cors-headers==4.2.0
+django-environ==0.10.0
 django-phonenumber-field==7.1.0
 djangorestframework==3.14.0
 phonenumbers==8.13.16
@@ -11,3 +12,4 @@ pytz==2023.3
 sqlparse==0.4.4
 typing-extensions==4.7.1
 tzdata==2023.3
+psycopg2
