--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,13 @@ services:
   frontend:
     build:
       context: ./frontend
+    volumes:
+      - ./frontend:/var/www/docker-vue
+      - /var/www/docker-vue/node_modules
+    environment:
+      - npm_config_unsafe_perm=true
     ports:
       - "8080:8080"
-    command: 
-      sh -c "npm run serve --watch"
-    volumes:
-      - ./frontend:/app
 
   redis:
     image: redis:7.0.5-alpine
