--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bulma": "^0.9.4",
+    "bulma-toast": "^2.4.2",
     "core-js": "^3.8.3",
     "npm-watch": "^0.11.0",
     "vue": "^3.2.26",
