--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,8 @@ pytz==2023.3
 sqlparse==0.4.4
 typing-extensions==4.7.1
 tzdata==2023.3
-psycopg2
-celery[redis] 
+psycopg2-binary
+celery[redis]==5.3.0
+django-celery-beat
 flower==1.2.0 
 requests
