--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,3 +100,10 @@ services:
       - redis
     ports: 
       - "5555:5555"
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    restart: always
+    ports:
+      - 1025:1025
+      - 8025:8025
